
Features & Interface
--------------------

* Strings are treated specially in Select to allow
  Select(['id, 'name'], where='value = 42'). Update allows a string in
  WHERE.

* ForeignKey('Table', refColumn='refcol_id') to allow ForeignKey to
  point to a non-id column; the referred column must be a unique integer
  column.

* delColumn now accepts a ForeignKey's name without 'ID'.

* A bug caused by psycopg2 recently added a new boolean not callable
  autocommit attribute was fixed.

SQLObject 1.1.3
===============

Released 30 Aug 2011.

* A bugfix was ported from `SQLObject 1.0.3`_.

SQLObject 1.1.2
===============

Released 8 Aug 2011.

* A bugfix was ported from `SQLObject 1.0.2`_.

SQLObject 1.1.1
===============

Released 1 Jul 2011.

* Parsing sqlobject.__doc__ for version number is declared obsolete. Use
  sqlobject.version or version_info.

* Documented sqlmeta.dbEncoding and connection.dbEncoding.

SQLObject 1.1
=============

Released 20 Jun 2011.

Features & Interface
--------------------

* SelectResults (returned from .select()) is allowed in IN(column, list).

* A different workaround is used in SQLiteConnection to prevent PySQLite
  from converting strings to unicode - in the case of a registered text
  conversion function PySQLite silently converts empty strings to Nones;
  now SQLObject uses text_factory instead and properly returns empty
  strings.

* It is now possible to declare one encoding for all UnicodeCol's per
  table (as sqlmeta.dbEncoding) or per connection (as connection.dbEncoding).
  Default (if dbEncoding is found neither in column nor in table nor in
  connection) is 'utf-8'.

Source code and internals
-------------------------

* Decorators @classmethod and @staticmethod are used everywhere.

* All 'mydict.has_key(name)' checks were replaced with 'name in mydict'.

SQLObject 1.0.3
===============

Released 30 Aug 2011.

* Fixed a bug with Postgres - add quotes in "SET client_encoding" query.

SQLObject 1.0.2
===============
